WFLY-9983 Fix build for JDK11